--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="portfolio-card">
-            <img class="portfolio-picture" src="./gambar/portfolio-2.jpg" alt="Logo">
+            <img class="portfolio-picture" src="./gambar/portfolio-2.JPG" alt="Logo">
             <div>
                 <h1 class="title-3">Juara 2 Lomba Desain Grafis FLS2N Jateng 2015</h1>
                 <p class="description">Lomba ini adalah desain grafis tentang produk dan poster "Peduli Alam". belakangan saya adalah hobi desain grafis. karena seni gambar itu unik dan kreatif.</p>
