--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div class="social-media-container">
                     <a href="https://instagram.com/bagasrah?utm_medium=copy_link"><img src="gambar/instagram.png" alt=""></a>
                     <a href="https://wa.me/6289602681456?text=Assalamualaikum"><img src="gambar/whatsapp-brands 1.png" alt=""></a>
-                    <a href="#"><img src="gambar/facebook.png" alt=""></a>
-                    <a href="#"><img src="gambar/telegram.png" alt=""></a>
+                    <a href="https://www.facebook.com/bagasrahmawana"><img src="gambar/facebook.png" alt=""></a>
+                    <a href="https://t.me/bagasrah"><img src="gambar/telegram.png" alt=""></a>
                 </div>
             </div>
         </div>
