--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
         </div>
     </div>
-    <footer>Copyright &copy; 2021 Bagas Rahmawan Aji. All right Reserved</footer>
+    <footer>Copyright &copy; 2021 Bagas Rahmawan Aji || All right Reserved</footer>
 
 </body>
 </html>
